--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "dtrace-provider": "^0.4.0",
     "lodash": "^3.5.0",
-    "restify": "^2.8.5",
+    "restify": "~3.0.0",
     "rethinkdbdash": "^1.16.13"
   },
   "repository": {
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/chriscantu/team-sync-node",
   "devDependencies": {
     "chai": "^2.1.2",
+    "chai-as-promised": "^4.3.0",
     "mocha": "^2.2.1",
+    "sinon-as-promised": "^3.0.0",
     "supervisor": "^0.6.0"
   },
   "scripts": {
