--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^2.1.2",
     "chai-as-promised": "^4.3.0",
     "mocha": "^2.2.1",
+    "sinon": "^1.17.2",
     "sinon-as-promised": "^3.0.0",
     "supervisor": "^0.6.0"
   },
