--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -9,6 +9,10 @@
   command: npm test
 - name: deploy
   service: herokudeployment
+  command: true
+- service: herokudeployment
+  command: codeship_heroku deploy /deploy codeship-heroku-deployment
+- service: herokudeployment
   command:  heroku run --exit-code --app codeship-heroku-deployment -- true
 - service: herokudeployment
   tag: master
