--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -11,9 +11,7 @@
   service: herokudeployment
   command: true
 - service: herokudeployment
-  command: codeship_heroku deploy /deploy codeship-heroku-deployment
-- service: herokudeployment
-  command:  heroku run --exit-code --app codeship-heroku-deployment -- true
+  command:  heroku run --exit-code --app team-sync -- true
 - service: herokudeployment
   tag: master
   type: push
