--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -9,7 +9,7 @@
   command: npm test
 - name: deploy
   service: herokudeployment
-  command: true
+  command: codeship_heroku deploy /deploy youre-heroku-app-name
 - service: herokudeployment
   command:  heroku run --exit-code --app team-sync -- true
 - service: herokudeployment
