--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "test": "mocha -R spec",
+    "start": "node app.js",
     "dev": "supervisor --debug app/app.js"
   }
 }
