--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -9,9 +9,9 @@
   command: npm test
 - name: deploy
   service: herokudeployment
-  command: codeship_heroku deploy /deploy team-sync
+  command: codeship_heroku deploy team-sync
 - service: herokudeployment
-  command:  heroku run --exit-code --app team-sync -- true
+  command: heroku run --exit-code --app team-sync -- true
 - service: herokudeployment
   tag: master
   type: push
